--- a/colt_project/src/test/java/com/config/application.properties
+++ b/colt_project/src/test/java/com/config/application.properties
@@ -6,19 +6,19 @@ BROWSER=Chrome
 # HtmlUnitDriver
 
 DealPriceUser=Namita.Singh@colt.net
-DealPriceUserPassword=Colt@1234
+DealPriceUserPassword=Online@123
 
 FinanaceApproverUser1=Akansha.Khanna@colt.net
 FinanaceApproverPassword1=Colt@1234
 
 SalesApproverUser=mohit.khetrapal@colt.net
-SalesApproverPassword=i0*_yt4IF6
+SalesApproverPassword=Colt@123
 
 FinanaceApproverUser=ashwani.singh31@colt.net
 FinanaceApproverPassword=Logica360@@
 
 SalesUser=Abhishek.Bahadur@colt.net
-SalesUserPass=Colt@1234
+SalesUserPass=Online@123
 
 
 #C4C Application Configuration
