--- a/colt_project/src/test/java/com/config/application.properties
+++ b/colt_project/src/test/java/com/config/application.properties
@@ -8,17 +8,17 @@ BROWSER=Chrome
 DealPriceUser=Namita.Singh@colt.net
 DealPriceUserPassword=Online@123
 
-FinanaceApproverUser1=Akansha.Khanna@colt.net
-FinanaceApproverPassword1=Colt@1234
+FinanaceApproverUser1=mohit.khetrapal@colt.net
+FinanaceApproverPassword1=Colt@123
 
-SalesApproverUser=mohit.khetrapal@colt.net
-SalesApproverPassword=Colt@123
+SalesApproverUser=Mazhar.rana@colt.net
+SalesApproverPassword=Colt@1234
 
-FinanaceApproverUser=ashwani.singh31@colt.net
-FinanaceApproverPassword=Logica360@@
+FinanaceApproverUser=Mazhar.rana@colt.net
+FinanaceApproverPassword=Colt@1234
 
 SalesUser=Abhishek.Bahadur@colt.net
-SalesUserPass=Online@123
+SalesUserPass=Online@1234
 
 
 #C4C Application Configuration
