--- a/colt_project/pom.xml
+++ b/colt_project/pom.xml
@@ -183,9 +183,10 @@
 					</executions>
 					<testFailureIgnore>true</testFailureIgnore>
 					<suiteXmlFiles>
-						<file>src/test/resources/suites/SanitySuite.xml</file>
-						<file>${test}</file>
-						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+						<!-- <file>src/test/resources/suites/SanitySuite.xml</file>
+						<file>${test}</file> -->
+						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile> 
+						<!-- <suiteXmlFile>src/test/resources/suites/SanitySuite.xml</suiteXmlFile> -->
 					</suiteXmlFiles>
 					<properties>
 						<property>
